# certcv

./: .pre-commit-config.yaml  LICENSE  README.md  certcv.py  pyproject.toml  setup.cfg
.circleci/: config.yml
certcv/: certcv.py
tests/: test_cert_cv.py
